--- a/src/style.css
+++ b/src/style.css
@@ -131,7 +131,7 @@ footer > * {
 	margin-block-end: 0.5rem !important;
 }
 
-.contents .content h2.zh-cn {
+.contents .content h2.us-en {
 	font-weight: 900 !important;
 }
 
